# IRT

./: .gitignore  CMakeLists.txt  plot_ampere.ipynb  plot_faraday.ipynb  test_boris_plot.ipynb  test_hybirt.ipynb
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  plot_faraday-checkpoint.ipynb  test_hybirt-checkpoint.ipynb
src/: ampere.hpp  faraday.hpp  field.hpp  gridlayout.hpp  hybirt.cpp  moments.hpp  ohm.hpp  particle.hpp  population.hpp  pusher.hpp  utils.hpp  vecfield.hpp
src/.ipynb_checkpoints/: ampere-checkpoint.hpp  boundary_condition-checkpoint.hpp  diagnostics-checkpoint.hpp  faraday-checkpoint.hpp  hybirt-checkpoint.cpp  moments-checkpoint.hpp  population-checkpoint.hpp  pusher-checkpoint.hpp
tests/boris/: CMakeLists.txt
tests/boris/.ipynb_checkpoints/: test_boris-checkpoint.cpp
tests/ion_beam/: CMakeLists.txt
tests/test_ampere/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  test_ampere-checkpoint.cpp
tests/test_faraday/: test_faraday.cpp
tests/test_faraday/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
tests/test_population_deposit/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  test_population_deposit-checkpoint.cpp
tests/waves/: CMakeLists.txt
